--- a/index.html
+++ b/index.html
@@ -489,6 +489,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscription">
+          <p class="subscription-text">Подпишитесь на рассылку</p>
+          <div class="subscription-all">
+            <label class="subscription-form-label">
+              <input
+                type="email"
+                class="subscription-form-input"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="subscription-button-form">
+              <span class="subscription-button-text-form">Подписаться</span>
+              <svg class="icon-send">
+                <use href="./images/SVG/sprite.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- модалка -->
@@ -496,9 +515,67 @@
       <div class="modal">
         <button class="button-end" data-modal-close>
           <svg class="svg-end">
-            <use href="./images/SVG/spritemodal.svg#icon-buttonend"></use>
+            <use href="./images/SVG/sprite.svg#icon-buttonend"></use>
           </svg>
         </button>
+        <h2 class="modal-head">Оставьте свои данные, мы вам перезвоним</h2>
+        <form>
+          <div class="form">
+            <div class="form-field">
+              <label class="form-label">
+                <span class="form-name">Имя</span>
+                <input type="text" class="form-input" name="username" />
+                <svg class="icon-modal">
+                  <use href="./images/SVG/sprite.svg#icon-modalname"></use>
+                </svg>
+              </label>
+            </div>
+
+            <div class="form-field">
+              <label class="form-label">
+                <span class="form-name">Телефон</span>
+                <input type="tel" class="form-input" name="tel" />
+                <svg class="icon-modal">
+                  <use href="./images/SVG/sprite.svg#icon-modalphone"></use>
+                </svg>
+              </label>
+            </div>
+
+            <div class="form-field">
+              <label class="form-label">
+                <span class="form-name">Почта</span>
+                <input type="email" class="form-input" name="email" />
+                <svg class="icon-modal">
+                  <use href="./images/SVG/sprite.svg#icon-modalmail"></use>
+                </svg>
+              </label>
+            </div>
+
+            <label class="form-label">
+              <span class="form-name">Комментарий</span>
+              <textarea
+                name="comment"
+                class="textarea"
+                placeholder="Введите текст"
+              ></textarea>
+            </label>
+          </div>
+          <div class="checkbox">
+            <label class="checkbox-label">
+              <input class="checkbox-input" type="checkbox" name="topic" />
+              <span class="checkbox-icon"></span>
+              <span class="contract"
+                >Соглашаюсь с рассылкой и принимаю
+                <a href="" class="contract-link"> Условия договора</a></span
+              >
+            </label>
+          </div>
+          <div class="submit">
+            <button type="submit" class="button-form">
+              <span class="button-text-form">Отправить</span>
+            </button>
+          </div>
+        </form>
       </div>
     </div>
     <script src="./JS/modal.js"></script>
